feat: 🎸 update swagger
